--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ android {
 
 dependencies {
 
+    //user permission
+    implementation 'com.karumi:dexter:6.2.2'
+
+    //coil
+    implementation("io.coil-kt:coil:1.3.2")
+
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.40'
     kapt 'com.google.dagger:hilt-compiler:2.40'
