Add new function ( Added the ability to call )

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ android {
 
 dependencies {
 
+    //permissions lib
+    implementation 'ru.superjob:kotlin-permissions:1.0.3'
+
     //Cascade menu lib
     implementation "me.saket.cascade:cascade:1.3.0"
 
